# spec-kit-colearn

./: .markdownlint-cli2.jsonc  .markdownlint.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  example.md  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: lint.yml  npm-publish.yml  pypi.yml  release.yml
.github/workflows/scripts/: create-github-release.sh  create-release-packages.ps1  create-release-packages.sh
docs/: installation.md
examples/: README.md
examples/01-todo-app/: README.md
examples/02-ecommerce/: README.md
examples/03-social-network/: README.md
examples/ai-agent/: README.md
examples/blog-website/: README.md
examples/ecommerce-full/: README.md
examples/user-authentication/: README.md
mcp-server-mern/: package-lock.json  package.json  tsconfig.json
mcp-server-mern/src/: index.ts
memory/: command-rules.md  constitution.md
protocol-templates/: AGENTS.md
scripts/powershell/: common.ps1  create-adr.ps1  create-phr.ps1  update-agent-context.ps1
src/specifyplus_cli/: __init__.py
templates/commands/: adr.md  discover.md  glossary.md  learn.md  phr.md
